tests/baselines/reference/comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.errors.txt
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(13,11): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(13,15): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(14,11): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(14,15): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(17,11): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(17,15): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(18,11): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(18,15): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(21,11): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(21,16): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(22,11): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(22,16): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(25,11): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(25,16): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(26,11): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(26,16): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(29,11): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(29,16): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(30,11): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(30,16): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(33,11): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(33,16): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(34,11): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(34,16): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(37,11): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(37,17): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(38,11): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(38,17): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(41,11): error TS2454: Variable 'a' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(41,17): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(42,11): error TS2454: Variable 'b' is used before being assigned.
comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts(42,17): error TS2454: Variable 'a' is used before being assigned.


==== comparisonOperatorWithNoRelationshipObjectsOnOptionalProperty.ts (32 errors) ====
    interface A1 {
        b?: number;
    }
    
    interface B1 {
        b?: string;
    }
    
    var a: A1;
    var b: B1;
    
    // operator <
    var ra1 = a < b;
              ~
!!! error TS2454: Variable 'a' is used before being assigned.
                  ~
!!! error TS2454: Variable 'b' is used before being assigned.
    var ra2 = b < a;
              ~
!!! error TS2454: Variable 'b' is used before being assigned.
                  ~
!!! error TS2454: Variable 'a' is used before being assigned.
    
    // operator >
    var rb1 = a > b;
              ~
!!! error TS2454: Variable 'a' is used before being assigned.
                  ~
!!! error TS2454: Variable 'b' is used before being assigned.
    var rb2 = b > a;
              ~
!!! error TS2454: Variable 'b' is used before being assigned.
                  ~
!!! error TS2454: Variable 'a' is used before being assigned.
    
    // operator <=
    var rc1 = a <= b;
              ~
!!! error TS2454: Variable 'a' is used before being assigned.
                   ~
!!! error TS2454: Variable 'b' is used before being assigned.
    var rc2 = b <= a;
              ~
!!! error TS2454: Variable 'b' is used before being assigned.
                   ~
!!! error TS2454: Variable 'a' is used before being assigned.
    
    // operator >=
    var rd1 = a >= b;
              ~
!!! error TS2454: Variable 'a' is used before being assigned.
                   ~
!!! error TS2454: Variable 'b' is used before being assigned.
    var rd2 = b >= a;
              ~
!!! error TS2454: Variable 'b' is used before being assigned.
                   ~
!!! error TS2454: Variable 'a' is used before being assigned.
    
    // operator ==
    var re1 = a == b;
              ~
!!! error TS2454: Variable 'a' is used before being assigned.
                   ~
!!! error TS2454: Variable 'b' is used before being assigned.
    var re2 = b == a;
              ~
!!! error TS2454: Variable 'b' is used before being assigned.
                   ~
!!! error TS2454: Variable 'a' is used before being assigned.
    
    // operator !=
    var rf1 = a != b;
              ~
!!! error TS2454: Variable 'a' is used before being assigned.
                   ~
!!! error TS2454: Variable 'b' is used before being assigned.
    var rf2 = b != a;
              ~
!!! error TS2454: Variable 'b' is used before being assigned.
                   ~
!!! error TS2454: Variable 'a' is used before being assigned.
    
    // operator ===
    var rg1 = a === b;
              ~
!!! error TS2454: Variable 'a' is used before being assigned.
                    ~
!!! error TS2454: Variable 'b' is used before being assigned.
    var rg2 = b === a;
              ~
!!! error TS2454: Variable 'b' is used before being assigned.
                    ~
!!! error TS2454: Variable 'a' is used before being assigned.
    
    // operator !==
    var rh1 = a !== b;
              ~
!!! error TS2454: Variable 'a' is used before being assigned.
                    ~
!!! error TS2454: Variable 'b' is used before being assigned.
    var rh2 = b !== a;
              ~
!!! error TS2454: Variable 'b' is used before being assigned.
                    ~
!!! error TS2454: Variable 'a' is used before being assigned.